--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
                 width: "100%",
                 history: true,
                 mouseWheel: true,
+                controls: false,
 
                 // More info https://github.com/hakimel/reveal.js#dependencies
                 dependencies: [
